--- a/front/package.json
+++ b/front/package.json
@@ -11,14 +11,15 @@
     "start": "rsbuild dev --mode development"
   },
   "dependencies": {
-    "@emotion/react": "11.13.3",
-    "@emotion/styled": "11.13.0",
-    "@mui/material": "5.16.7",
-    "@mui/system": "^5.16.7",
-    "@tanstack/react-query": "^5.61.0",
-    "axios": "^1.7.7",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/lab": "6.0.0-beta.17",
+    "@mui/material": "^6.1.9",
+    "@mui/system": "^6.1.9",
+    "@tanstack/react-query": "^5.61.5",
+    "axios": "^1.7.8",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,15 +30,15 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.1.4",
+    "@rsbuild/core": "^1.1.6",
     "@rsbuild/plugin-react": "^1.0.7",
-    "@rsbuild/plugin-type-check": "^1.0.1",
+    "@rsbuild/plugin-type-check": "^1.1.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.17.6",
+    "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "prop-types": "^15.8.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "packageManager": "pnpm@9.11.0"
 }
