--- a/front/.production.env
+++ b/front/.production.env
@@ -1,5 +1,5 @@
 APP_NAME=Split&Conquer
-APP_URL=http://localhost:3000
+APP_URL=https://witty-flower-09a0e4a0f.4.azurestaticapps.net
 APP_PORT=3000
 PUBLIC_FA_URL=https://kit.fontawesome.com/c30b169412.js
 
