--- a/front/package.json
+++ b/front/package.json
@@ -30,15 +30,21 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@rsbuild/core": "^1.1.6",
+    "@rsbuild/plugin-eslint": "^1.1.0",
     "@rsbuild/plugin-react": "^1.0.7",
     "@rsbuild/plugin-type-check": "^1.1.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "prop-types": "^15.8.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   },
   "packageManager": "pnpm@9.11.0"
 }
