--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.28.0",
     "simplebar-core": "1.2.6",
     "simplebar-react": "^3.2.6",
+    "yup": "^1.4.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
