--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 1.8
+        distribution: 'microsoft'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       working-directory: my-app-path
