--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v3
       with:
-        app-name: my-app-name
+        app-name: tcp-gabriel
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: my/target/*.jar
+        package: ./target/*.jar
