--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         app-name: tcp-gabriel
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: target/*.jar
+        package: api/target/*.jar
