--- a/front/.env
+++ b/front/.env
@@ -3,3 +3,6 @@ APP_URL=http://localhost:3000
 APP_PORT=3000
 PUBLIC_FA_URL=https://kit.fontawesome.com/c30b169412.js
 
+# PUBLIC_API_URL=http://localhost:8000
+PUBLIC_API_URL=https://tcp-gabriel-hubdbtd4cfbxb2e7.brazilsouth-01.azurewebsites.net/
+
