--- a/front/.env.production
+++ b/front/.env.production
@@ -1,2 +1,2 @@
 APP_URL=https://witty-flower-09a0e4a0f.4.azurestaticapps.net
-
+PUBLIC_API_URL=https://tcp-gabriel-hubdbtd4cfbxb2e7.brazilsouth-01.azurewebsites.net/
